Fix textarea not visible in Android 2.3 (broken position: absolute). Closes #935.
(cherry-picked from 541ba3c)

--- a/styles/mobile/common.less
+++ b/styles/mobile/common.less
@@ -1215,6 +1215,11 @@
     z-index: 1;
 }
 
+.km-root .km-list textarea
+{
+    top: 0;
+}
+
 .km-root .km-list input:not([type=button]):not([type=submit]):not([type=reset]):not([type=image]):not([type=checkbox]):not([type=radio]):not(.k-input):not(.k-button),
 .km-root .km-list select:not([multiple]),
 .km-root .km-list .k-dropdown,
